  use ``ensure_file`` will continue to work but just with a warning.

* Removed copyright notice that was accidentally included in new
  packages created by ``paster create``

* Allow variable assignments at the end of ``paster serve``, like
  ``paster serve http_port=80``; then you can use ``%(http_port)s`` in
  your config files (requires up-to-date Paste Deploy).

1.0
---

* Added entry point for CherryPy 3's WSGI server.

* Fixed ``paster serve`` to hide KeyboardInterrupt (CTRL-C) tracebacks
  in ``--reload`` mode.

* Added ``template_renderer`` argument to
  ``paste.script.copydir.copydir``.  This allows you to use arbitrary
  template languages, instead of just ``string.Template`` and Cheetah.

0.9.9
-----

* egg:PasteScript#test (the paste.script.testapp) now accepts ``lint``
  and ``text`` boolean configuration.  ``lint`` will turn on
  ``paste.lint`` validation.  ``text`` will cause it to return a
  simple text/plain response with the environ, instead of an HTML
  table.

* Improvements all around to ``paster points``, plus documentation for
  existing entry point groups.

0.9.8
-----

* New projects will now ignore
  ``Package.egg-info/dependency_links.txt``, just like all the other
  derivative files in the ``egg-info`` directory

* ``paster serve --reload`` was broken on Windows when the Python
  executable was in a directory with spaces in it.  This is probably a
  bug in the ``subprocess`` module.

0.9.7
-----

* Update to filemaker commands to take optional argument so that when
  new directories are for a Python package, they will have a __init__.py
  created as well.

0.9.6
-----

* Do all variable assignment during package creation up-front, before
  actually creating the files.

* Added the ``egg`` template variable: provides projects with a safe
  egg name as generated by setuptools. This should be used for
  egg-info directories in templates (e.g. ``+egg+.egg-info`` instead
  of ``+project+.egg-info``), and anywhere else the egg name is